[package]
name = "rtmp-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance RTMP server built in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/6amson/rtmp-server"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Networking
bytes = "1.5"
futures = "0.3"

# Serialization for RTMP messages
serde = { version = "1.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
clap = { version = "4.0", features = ["derive"] }
serde_yaml = "0.9"

# Testing (optional for now)
[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"